inisettings['xEditCommandLineArguments'] under # 418 EEE docs

--- a/Mopy/bash_default_Russian.ini
+++ b/Mopy/bash_default_Russian.ini
@@ -169,6 +169,11 @@
 ;s7zExtraCompressionArguments=-ms=on -ms=1m
 
 
+;--sxEditCommandLineArguments: command line arguments to pass to xEdit when
+; launched via Bash.
+;sxEditCommandLineArguments=-ms=on -ms=1m
+
+
 ;--bEnableSplashScreen: Use this to disable the startup splash screen
 ;bEnableSplashScreen=True
 
